--- a/endutour/src/app/shared/components/login/login.component.html
+++ b/endutour/src/app/shared/components/login/login.component.html
@@ -4,13 +4,46 @@
     <div class="container rounded">
         <div class="form-group">
             <label for="inputEmail">Correo Electrónico</label>
-            <input type="email" class="form-control" id="inputEmail" placeholder="Escriba su correo electrónico">            
+            <input type="email" class="form-control" id="inputEmail" [(ngModel)]="email_login" placeholder="Escriba su correo electrónico">            
         </div>
         <div class="form-group">
             <label for="password">Contraseña</label>
-            <input type="password" class="form-control" id="password" placeholder="Escriba su contraseña">
+            <input type="password" class="form-control" id="password" [(ngModel)]="password_login" placeholder="Escriba su contraseña">
+            
         </div>
-        <a routerLink="/principal"><button type="submit" class="btn ">Aceptar</button></a>
-        <a ><button type="submit" class="btn ">Registrar</button></a>
+       <label class="red">{{mensaje}}</label>
+        <a ><button type="submit" class="btn " (click)="login()">Aceptar</button></a>
+        <a ><button type="submit" class="btn "(click)="open(content)">Registrar</button></a>
     </div>
 </div>
+<flash-messages></flash-messages>
+
+<ng-template #content let-c="close" let-d="dismiss">
+        <div class="modal-header">
+          <h4 class="modal-title">Registro</h4>
+          <button type="button" class="close" aria-label="Close" (click)="d('Cross click')">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+        <p>
+                <input class="form-control form-control-lg" name="username" [(ngModel)]="current_user.username" type="text" placeholder="username">
+                <br>
+                <input class="form-control form-control-lg" name="email" [(ngModel)]="current_user.email" type="text" placeholder="Email">
+                <br>
+                <input class="form-control form-control-lg" name="name" [(ngModel)]="current_user.name" type="text" placeholder="Nombre">
+                <br>
+                <input class="form-control form-control-lg" name="phone" [(ngModel)]="current_user.phone" type="text" placeholder="Telefono">
+                <br>
+                <input class="form-control form-control-lg" name="password" [(ngModel)]="current_user.password" type="password" placeholder="Contraseña">
+                
+                
+        </p>
+         </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-outline-dark" (click)="addUser()">Registrar</button>
+          <button type="button" class="btn btn-outline-dark" (click)="c('Close click')">Cancelar</button>
+        </div>
+      </ng-template>
+
+     
