--- a/endutour/src/app/user/components/index/index.component.css
+++ b/endutour/src/app/user/components/index/index.component.css
@@ -9,3 +9,21 @@
     background-repeat: no-repeat;
     background-size: cover;
 }
+.details li {
+    list-style: none;
+  }
+  li {
+      margin-bottom:10px;
+      
+  }
+  .container{
+      margin-top: 15px;
+      margin-left: 0px;
+      width: 430px;
+  }
+
+  .card{
+      margin: 100px;
+      margin-bottom: 0px;
+      margin-top: 0px;
+  }
