--- a/endutour/src/app/user/components/menu/menu.component.html
+++ b/endutour/src/app/user/components/menu/menu.component.html
@@ -13,7 +13,7 @@
         <a class="nav-link"  routerLink="{{menu_option.link}}">{{menu_option.name}}</a>
       </li>
       <div class="nav-item ">
-        <a class="nav-link" >Usuario</a>
+        <a class="nav-link" >{{user_log}}</a>
       </div>
 
     </ul>
